# atlas-context-router-rs

./: .containerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Containerfile  ISSUES.md  MCP_TOOLS.md  README.md  SECURITY.md  SHIPPED.md  SUPPORT.md  clippy.toml  deny.toml  install.sh  release-plz.toml  rustfmt.toml  tasks.yaml
.atlas/: worldview.sqlite
.githooks/: post-checkout  post-merge  pre-commit
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
.mk/vault/local/agents/: data.asc
docs/: .gitignore  additional_issues.txt  architecture.md  error_codes.md  threat-model-serve.md
docs/contracts/: atlas_toon.v1.md  output-stability.md
docs/future_roadmap/: atlas-exec-subsystem-todo.md  atlas_execution_subsystem_v2.md  atlas_execution_subsystem_v3.md  atlas_execution_subsystem_v4.md
fuzz/: .gitignore  Cargo.toml  README.md  regex.dict
fuzz/corpus/ast_helpers_walk/: seed_bash_core.txt  seed_c_bad_syntax.txt  seed_cpp_core.txt  seed_csharp_core.txt  seed_go_bad_syntax.txt  seed_html_bad_syntax.txt  seed_html_core.txt  seed_java_bad_syntax.txt  seed_javascript_bad_syntax.txt  seed_json_bad_syntax.txt  seed_markdown_bad_syntax.txt  seed_php_bad_syntax.txt  seed_php_core.txt  seed_python_core.txt  seed_ruby_core.txt  seed_rust_core.txt  seed_scala_bad_syntax.txt  seed_toml_core.txt  seed_typescript_bad_syntax.txt
fuzz/corpus/language_parsers/: markdown_shorter_source_old_tree  seed_c_core.txt  seed_csharp_bad_syntax.txt  seed_csharp_core.txt  seed_css_bad_syntax.txt  seed_css_core.txt  seed_go_bad_syntax.txt  seed_go_core.txt  seed_html_bad_syntax.txt  seed_java_bad_syntax.txt  seed_java_core.txt  seed_javascript_core.txt  seed_json_core.txt  seed_markdown_bad_syntax.txt  seed_python_core.txt  seed_scala_bad_syntax.txt  seed_scala_core.txt
fuzz/corpus/parser_handlers/: seed_bash_bad_syntax.txt  seed_bash_core.txt  seed_c_bad_syntax.txt  seed_cpp_bad_syntax.txt  seed_cpp_core.txt  seed_html_core.txt  seed_javascript_bad_syntax.txt  seed_json_bad_syntax.txt  seed_markdown_core.txt  seed_php_bad_syntax.txt  seed_php_core.txt  seed_python_bad_syntax.txt  seed_ruby_bad_syntax.txt  seed_ruby_core.txt  seed_rust_bad_syntax.txt  seed_rust_core.txt  seed_toml_bad_syntax.txt  seed_toml_core.txt  seed_typescript_bad_syntax.txt  seed_typescript_core.txt
fuzz/corpus/parser_invariants/: seed_bash_bad_syntax.txt  seed_c_core.txt  seed_cpp_bad_syntax.txt  seed_csharp_bad_syntax.txt  seed_css_bad_syntax.txt  seed_css_core.txt  seed_go_core.txt  seed_java_core.txt  seed_javascript_core.txt  seed_json_core.txt  seed_markdown_core.txt  seed_python_bad_syntax.txt  seed_ruby_bad_syntax.txt  seed_rust_bad_syntax.txt  seed_scala_core.txt  seed_toml_bad_syntax.txt  seed_typescript_core.txt
fuzz/corpus/regex_sql_udf/: seed_alternation.txt  seed_anchors.txt  seed_character_classes.txt  seed_invalid_patterns.txt  seed_literals.txt  seed_unicode_heavy.txt
fuzz/corpus/tree_cache_stateful/: bash_shorter_source_old_tree  json_reparse_with_bash_tree  seed_bash_bad_syntax.txt  seed_bash_core.txt  seed_c_bad_syntax.txt  seed_c_core.txt  seed_cpp_bad_syntax.txt  seed_cpp_core.txt  seed_csharp_bad_syntax.txt  seed_csharp_core.txt  seed_css_bad_syntax.txt  seed_css_core.txt  seed_go_bad_syntax.txt  seed_go_core.txt  seed_html_bad_syntax.txt  seed_html_core.txt  seed_java_bad_syntax.txt  seed_java_core.txt  seed_javascript_bad_syntax.txt  seed_javascript_core.txt  seed_json_bad_syntax.txt  seed_json_core.txt  seed_markdown_bad_syntax.txt  seed_markdown_core.txt  seed_php_bad_syntax.txt  seed_php_core.txt  seed_python_bad_syntax.txt  seed_python_core.txt  seed_ruby_bad_syntax.txt  seed_ruby_core.txt  seed_rust_bad_syntax.txt  seed_rust_core.txt  seed_scala_bad_syntax.txt  seed_scala_core.txt  seed_toml_bad_syntax.txt  seed_toml_core.txt  seed_typescript_bad_syntax.txt  seed_typescript_core.txt
fuzz/fuzz_targets/: ast_helpers_walk.rs  language_parsers.rs  parser_handlers.rs  parser_invariants.rs  refactor_parse_validation.rs  regex_sql_udf.rs  tree_cache_stateful.rs  update_graph_sequence.rs
fuzz/scripts/: refresh_seed_corpus.sh
fuzz/src/: lib.rs
schemas/atlas_cli.v1/: build.schema.json  context.schema.json  docs-section.schema.json  doctor.schema.json  explain-change.schema.json  impact.schema.json  insights-architecture.schema.json  insights-complex-functions.schema.json  insights-large-functions.schema.json  insights-metrics.schema.json  insights-patterns.schema.json  insights-risk.schema.json  postprocess.schema.json  query.schema.json  review-context.schema.json  status.schema.json  update.schema.json  watch.schema.json
scripts/: bench-json-harness.sh  fetch-gh-run-logs.sh  release.sh  update-containerfile-images.sh
scripts/tests/: fetch-gh-run-logs-test.sh  test-workspace-summary-test.sh
