[workspace]
members = [
  "packages/atlas-cli",
  "packages/atlas-core",
  "packages/atlas-mcp",
  "packages/atlas-store-sqlite",
  "packages/atlas-repo",
  "packages/atlas-parser",
  "packages/atlas-search",
  "packages/atlas-review",
  "packages/atlas-impact",
]
resolver = "2"

[workspace.dependencies]
# errors
thiserror = "2"
anyhow = "1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# paths / hash / time
camino = { version = "1", features = ["serde1"] }
sha2 = "0.10"
time = { version = "0.3", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "bundled-full"] }

# Tree-sitter
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

# benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# concurrency
rayon = "1"
hashbrown = "0.15"

# internal crates
atlas-core = { path = "packages/atlas-core" }
atlas-mcp  = { path = "packages/atlas-mcp" }
