[workspace]
members = [
  "packages/atlas-cli",
  "packages/atlas-core",
  "packages/atlas-engine",
  "packages/atlas-history",
  "packages/atlas-mcp",
  "packages/atlas-refactor",
  "packages/atlas-store-sqlite",
  "packages/atlas-repo",
  "packages/atlas-parser",
  "packages/atlas-search",
  "packages/atlas-review",
  "packages/atlas-impact",
  "packages/atlas-reasoning",
  "packages/atlas-contentstore",
  "packages/atlas-session",
  "packages/atlas-contextsave",
  "packages/atlas-adapters",
  "packages/atlas-db-utils",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
rust-version = "1.95"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[workspace.metadata.cargo-deny]
config = "deny.toml"

[workspace.metadata.dist]
cargo-dist-version = "0.29.0"
ci = ["github"]
installers = ["shell"]
targets = ["x86_64-unknown-linux-musl", "aarch64-apple-darwin"]
unix-archive = ".tar.gz"

[workspace.metadata.release-plz]
config = "release-plz.toml"

[workspace.dependencies]
# errors
thiserror = "2"
anyhow = "1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# paths / hash / time
camino = { version = "1", features = ["serde1"] }
sha2 = "0.10"
time = { version = "0.3", features = ["serde"] }
unicode-normalization = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled-full"] }
atlas-db-utils = { path = "packages/atlas-db-utils", version = "1.0.0" }

# Tree-sitter
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-md = { version = "0.5.3", features = ["parser"] }
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-php = "0.24.2"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-scala = "0.26.0"
tree-sitter-ruby = "0.23.1"

# benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# test utilities
static_assertions = "1"

# HTTP client
ureq = { version = "3", features = ["json"] }

# regex
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }

# concurrency
rayon = "1"
notify = "7"

# internal crates
atlas-core      = { path = "packages/atlas-core" }
atlas-engine    = { path = "packages/atlas-engine" }
atlas-mcp       = { path = "packages/atlas-mcp" }
atlas-reasoning = { path = "packages/atlas-reasoning" }

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
debug = 1
split-debuginfo = "unpacked"
