[package]
name = "atlas-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
atlas-parser = { path = "../packages/atlas-parser" }
atlas-store-sqlite = { path = "../packages/atlas-store-sqlite" }
libfuzzer-sys = "0.4"
sha2 = "0.10"
tree-sitter = "0.26"

[[bin]]
name = "parser_handlers"
path = "fuzz_targets/parser_handlers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "language_parsers"
path = "fuzz_targets/language_parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "regex_sql_udf"
path = "fuzz_targets/regex_sql_udf.rs"
test = false
doc = false
bench = false
